<resources>
    <string name="app_name">Детские часы</string>
    <string name="buttonSettings">Настройки</string>
    <string name="intervalsTitle">Интервалы</string>
    <string name="eventsTitle">События</string>
    <string name="buttonChangeIntervals">Изменить интервалы</string>
    <string name="dialogChangeIntervalsHint">Введите через пробел от трёх до пяти цифр, являющихся началом интервалов для главного экрана, которые удобны для вас и вашего ребёнка. Например, ввод \"7 12 18 23\" создаст четыре интервала:\n• 7 – 12 часов\n• 12 – 18 часов\n• 18 – 23 часов\n• 23 – 7 часов</string>
    <string name="intervalsHint">Введите интервалы</string>
    <string name="buttonSave">Сохранить</string>
    <string name="inputErrorIntervals">Ошибка ввода.</string>
    <string name="weirdDataErrorIntervals">Подозрительные числа для времени.</string>
    <string name="littleDataErrorIntervals">Введите не менее трёх чисел через пробел.</string>
    <string name="tooMuchDataErrorIntervals">Введите не более пяти чисел через пробел.</string>
    <string name="orderErrorIntervals">Неверный порядок чисел.</string>
    <string name="radioButtonBoy">Мальчик</string>
    <string name="radioButtonGirl">Девочка</string>
    <string name="cdKidIcon">Иконка ребёнка</string>
    <string name="format12hours">12 часов</string>
    <string name="format24hours">24 часа</string>
    <string name="timeFormatTitle">Формат времени</string>
    <string name="buttonDelete">Удалить</string>
    <string name="cdEventIcon">Иконка события</string>
    <string name="buttonAddEvent">Добавить событие</string>
    <string name="noEventsHint">Нет событий</string>
    <string name="buttonAboutApp">О разработчике</string>
</resources>